Enable canary delivery in idpay-ranking Helm chart

--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -122,3 +122,5 @@ microservice-chart:
         type: header
         headerName: X-Canary
         headerValue: canary
+    envSecret: {}
+    envConfig: {}
