--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -118,9 +118,11 @@ microservice-chart:
   canaryDelivery:
     create: true
     ingress:
-      canary:
-        type: header
-        headerName: X-Canary
-        headerValue: canary
+      header: true
+      headerName: X-Canary
+      headerValue: canary
+      image:
+        repository: ghcr.io/pagopa/idpay-ranking
+        tag: v1.2.3@sha256:c8215c88a9c8ad9a3922695c68d17bcd767b9bf035ffcdc7043ba08a100366f3
     envSecret: {}
     envConfig: {}
