--- a/helm/prod/ext/idpay-iban/values.yaml
+++ b/helm/prod/ext/idpay-iban/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-iban
-    tag: v1.1.7@sha256:d59fcb6a89fea377b129f4137e3a616477453e3c494e61ad827319d3ebbbffaf
+    tag: v1.2.0sha256:ae0b10ddd46c453c5c9c88a2df05ddf60a7dc350b34d43d7bf47d09414694706
     pullPolicy: Always
 
   ingress:
@@ -17,8 +17,8 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 1
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
