--- a/helm/dev/mid/idpay-ranking/values.yaml
+++ b/helm/dev/mid/idpay-ranking/values.yaml
@@ -1,4 +1,6 @@
 microservice-chart:
+  nameOverride: "canary"
+
   image:
     repository: ghcr.io/pagopa/idpay-ranking
     tag: snapshot-develop
@@ -58,3 +60,15 @@ microservice-chart:
       -Djava.rmi.server.hostname=127.0.0.1
       -Dcom.sun.management.jmxremote.authenticate=false
       -Dcom.sun.management.jmxremote.ssl=false
+
+  canaryDelivery:
+    create: true
+    ingress:
+      header: true
+      headerName: X-Canary
+      headerValue: canary
+    image:
+      repository: ghcr.io/pagopa/idpay-ranking
+      tag: v1.2.3@sha256:c8215c88a9c8ad9a3922695c68d17bcd767b9bf035ffcdc7043ba08a100366f3
+    envSecret: {}
+    envConfig: {}
