commented inps cert for uat and prod

--- a/helm/prod/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/prod/top/idpay-admissibility-assessor/values.yaml
@@ -39,8 +39,8 @@ microservice-chart:
     PAGOPA_PDND_CONFIGURATION_CLIENT_ID_C021: pagopa-pdnd-configuration-client-id-c021
     PAGOPA_PDND_CONFIGURATION_KID_C021: pagopa-pdnd-configuration-kid-c021
     PAGOPA_PDND_CONFIGURATION_PURPOSE_ID_C021: pagopa-pdnd-configuration-purpose-id-c021
-    INPS_CLIENT_CERT_STRING: pagopa-inps-client-cert-string
-    INPS_CLIENT_KEY_PEM: pagopa-inps-client-key-pem
+#    INPS_CLIENT_CERT_STRING: pagopa-inps-client-cert-string
+#    INPS_CLIENT_KEY_PEM: pagopa-inps-client-key-pem
 
   keyvault:
     name: "cstar-p-itn-idpay-kv"
