--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -113,3 +113,15 @@ microservice-chart:
       operator: "Equal"
       value: "true"
       effect: "NoSchedule"
+
+  canaryDelivery:
+    create: true
+    ingress:
+      header: true
+      headerName: X-Canary
+      headerValue: canary
+    image:
+      repository: ghcr.io/pagopa/idpay-ranking
+      tag: v1.2.2
+    envSecret: {}
+    envConfig: {}
