Update `weightPercent` and image `tag` placeholders in idpay-ranking Helm chart.

--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -122,9 +122,9 @@ microservice-chart:
       header: true
       headerName: X-Canary
       headerValue: canary
-      weightPercent: 30
+      weightPercent: 10
     image:
       repository: ghcr.io/pagopa/idpay-ranking
-      tag: v1.2.2
+      tag: <HOT_FIX_IMAGE_HERE>
     envSecret: {}
     envConfig: {}
