--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -115,9 +115,9 @@ microservice-chart:
       effect: "NoSchedule"
 
   # Must be
-#  nameOverride: "canary"
+  nameOverride: "canary"
   canaryDelivery:
-    create: false
+    create: true
     ingress:
       header: true
       headerName: X-Canary
@@ -125,6 +125,6 @@ microservice-chart:
       weightPercent: 10
     image:
       repository: ghcr.io/pagopa/idpay-ranking
-      tag: <HOT_FIX_IMAGE_HERE>
+      tag: v1.2.3@sha256:c8215c88a9c8ad9a3922695c68d17bcd767b9bf035ffcdc7043ba08a100366f3
     envSecret: {}
     envConfig: {}
