Database changed from idpay-beneficiari to idpay-hot.

--- a/helm/_global/mcshared-datavault.yaml
+++ b/helm/_global/mcshared-datavault.yaml
@@ -54,7 +54,7 @@ microservice-chart:
     mongodb-connect-timeout: "5"
     mongodb-read-timeout: "10"
     mongodb-server-selection-timeout: "5"
-    mongodb-database: "idpay-beneficiari"
+    mongodb-database: "idpay-hot"
     datavault-retry-max-attempts: "5"
     datavault-retry-max-jitter-ms: "50"
     datavault-retry-max-cumulative-delay-ms: "3000"
