add initiative map in dev onboarding

--- a/helm/dev/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/dev/top/idpay-onboarding-workflow/values.yaml
@@ -53,6 +53,8 @@ microservice-chart:
     name: "cstar-d-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
+configMap:
+  initiativeIds: "68dd003ccce8c534d1da22bc,68de7fc681ce9e35a476e985,68dd003ccce8c534d1da22bb,68fb9937f0f9ee401031a0c7,68fb9cb9f0f9ee401031a0c8,68fb9ceaf0f9ee401031a0c9"
 
 #postman-test:
 #  run: true
