--- a/helm/_global/idpay-onboarding-workflow.yaml
+++ b/helm/_global/idpay-onboarding-workflow.yaml
@@ -61,7 +61,7 @@ microservice-chart:
     DELETE_PAGINATION_SIZE: "100"
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
-    INITIATIVE_IDS: "68dd003ccce8c534d1da22bc,68de7fc681ce9e35a476e985,68dd003ccce8c534d1da22bb,68fb9937f0f9ee401031a0c7,68fb9cb9f0f9ee401031a0c8,68fb9ceaf0f9ee401031a0c9"
+    INITIATIVE_IDS: "68dd003ccce8c534d1da22bc,68de7fc681ce9e35a476e985,68f7b78f2b2127edc183ad3c"
 
 
   externalConfigMapValues:
