--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-admissibility-assessor
-    tag: snapshot-develop
+    tag: snapshot-UPBE-363-be-configurazione-recovery-error-topic-per-ko-anpr
     pullPolicy: Always
 
   ingress:
@@ -76,3 +76,6 @@ microservice-chart:
     ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
 
     INPS_ISEE_CONSULTATION_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
+    INPS_MOCK_ENABLED: "true"
+    #TODO change port after test
+    INPS_MOCK_BASE_URL: http://idpay-mock-microservice-chart:8081/idpay/mock/inps/soap
