--- a/helm/_global/idpay-portal-welfare-backend-initiative.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-initiative.yaml
@@ -102,7 +102,7 @@ microservice-chart:
       RANKING_URI: idpay_ranking_host
       PDV_DECRYPT_BASE_URL: pdv_decrypt_base_url
       MERCHANT_URI: idpay_merchant_host
-      TIMELINE_URI:
+      TIMELINE_URI: idpay_timeline_host
       TRANSACTION_URI: idpay_transactions_host
       WALLET_URI: idpay_wallet_host
     idpay-eventhub-01:
