variable ASSISTED_LINK notification_email

--- a/helm/_global/idpay-notification-manager.yaml
+++ b/helm/_global/idpay-notification-manager.yaml
@@ -69,6 +69,7 @@ microservice-chart:
     DELETE_PAGINATION_SIZE: "100"
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
+    ASSISTED_LINK: "https://bonuselettrodomestici.it/utente/assistenza"
 
   externalConfigMapValues:
     idpay-common:
