Log level switched to DEBUG + DataVault 3.1.2

--- a/helm/_global/mcshared-datavault.yaml
+++ b/helm/_global/mcshared-datavault.yaml
@@ -50,7 +50,7 @@ microservice-chart:
   envConfig:
     json-logs: "true"
     quarkus-log-level: "WARN"
-    app-log-level: "INFO"
+    app-log-level: "DEBUG"
     mongodb-connect-timeout: "5"
     mongodb-read-timeout: "10"
     mongodb-server-selection-timeout: "5"
@@ -59,6 +59,7 @@ microservice-chart:
     datavault-retry-max-attempts: "5"
     datavault-retry-max-jitter-ms: "50"
     datavault-retry-max-cumulative-delay-ms: "3000"
+    try-to-find-first: "true"
 
   externalConfigMapValues:
 
