--- a/helm/_global/mcshared-datavault.yaml
+++ b/helm/_global/mcshared-datavault.yaml
@@ -60,6 +60,8 @@ microservice-chart:
     datavault-retry-max-jitter-ms: "50"
     datavault-retry-max-cumulative-delay-ms: "3000"
     try-to-find-first: "true"
+    cache-enabled: "true"
+    cache-expire-after-write: "1d"
 
   externalConfigMapValues:
 
@@ -67,6 +69,7 @@ microservice-chart:
     mongodb-connection-string-1: mongodb-primary-connection-string
     mongodb-connection-string-2: mongodb-secondary-connection-string
     application-insights-connection-string: appinsights-instrumentation-key
+    redis-url: idpay-redis-primary-connection-url
 
   # nodeSelector: {}
 
