--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -72,8 +72,8 @@ microservice-chart:
 
     ANPR_ENV: dev
     ANPR_AUTH_USERID: pagopa-idpay
-    #ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
-    ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
+    ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
+    #ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
 
     INPS_ISEE_CONSULTATION_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
     INPS_MOCK_ENABLED: "true"
