feat: [UPBE-223] be isee happy path (#146)
* ISEE - Happy path

* [UPBE-223] test decodeBase64

* [UPBE-336] added mock inps dev

* [UPBE-223] disable var mock for inps

* [UPBE-223] added uat brach env test inps

* [UPBE-223] update  dev tag

* [UPBE-223] added var prod

* [UPBE-223] enable mock isee in dev e uat

* [UPBE-223] enable mock isee in dev e uat

---------

Co-authored-by: EMELIGMWW <marta.meligarziera@emeal.nttdata.com>

--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -67,7 +67,7 @@ microservice-chart:
     CACHE_REFRESH_MS_RATE: "60000"
     REDIS_CACHE_ENABLED: "true"
 
-    #PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
+    PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
     PDND_ACCESS_TOKEN_AUDIENCE: auth.uat.interop.pagopa.it/client-assertion
 
     ANPR_ENV: dev
@@ -75,6 +75,6 @@ microservice-chart:
     ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
     #ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
 
-    INPS_ISEE_CONSULTATION_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
+    INPS_ISEE_CONSULTATION_BASE_URL: https://api.collaudo.inps.it/modi/soap/ConsultazioneISEE/v1
     INPS_MOCK_ENABLED: "true"
     INPS_MOCK_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
