--- a/helm/dev/top/idpay-asset-register-backend/values.yaml
+++ b/helm/dev/top/idpay-asset-register-backend/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-asset-register-backend
-    tag: snapshot-develop
+    tag: snapshot-LTBE-109-la-chiamata-products-deve-tornare-400-in-caso-di-validazione-fallita
     pullPolicy: Always
 
   ingress:
