update no reply subject prefix

--- a/helm/_global/idpay-notification-email.yaml
+++ b/helm/_global/idpay-notification-email.yaml
@@ -79,7 +79,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     ASSISTANCE_MAIL_SUBJECT_PREFIX: "[ASSISTANCE]"
-    NO_REPLY_SUBJECT_PREFIX: "[NO-REPLY]"
+#    NO_REPLY_SUBJECT_PREFIX: "[NO-REPLY]"
+    NO_REPLY_SUBJECT_PREFIX: ""
     ASSISTANCE_MAIL: "assistenza.IDPay@pagopa.it"
     AWS_REGION: "eu-central-1"
     ASSISTED_LINK: "https://bonuselettrodomestici.it/utente/assistenza"
