--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -26,6 +26,10 @@ microservice-chart:
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
+      - type: memory
+        metadata:
+          type: Utilization
+          value: "70"
 
   envSecret:
     aks-api-url: cstar-d-itn-dev-aks-apiserver-url
