--- a/helm/uat/top/idpay-kafka-connect/values.yaml
+++ b/helm/uat/top/idpay-kafka-connect/values.yaml
@@ -31,6 +31,10 @@ microservice-chart:
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
+      - type: memory
+        metadata:
+          type: Utilization
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
