--- a/helm/dev/top/idpay-ranker/values.yaml
+++ b/helm/dev/top/idpay-ranker/values.yaml
@@ -15,21 +15,9 @@ microservice-chart:
       memory: "1Gi"
       cpu: "600m"
 
+# Never enable autoscaling because is used for service bus queue processing
   autoscaling:
     enable: false
-    minReplica: 1
-    maxReplica: 1
-    pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
-    triggers:
-     - type: cpu
-       metadata:
-         type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-         value: "70"
-      - type: memory
-        metadata:
-          type: Utilization
-          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: "-Xms256m -Xmx512m -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=3002 -Dcom.sun.management.jmxremote.rmi.port=3003 -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
