--- a/helm/uat/top/idpay-ranker/values.yaml
+++ b/helm/uat/top/idpay-ranker/values.yaml
@@ -20,7 +20,14 @@ microservice-chart:
     enable: false
 
   envConfig:
-    JAVA_TOOL_OPTIONS: '-Xms256m -Xmx512m -javaagent:/app/applicationinsights-agent.jar -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json'
+    JAVA_TOOL_OPTIONS: >-
+      -XX:InitialRAMPercentage=50.0
+      -XX:MaxRAMPercentage=70.0
+      -XX:+UseG1GC
+      -XX:+UseContainerSupport
+      -Djava.security.egd=file:/dev/./urandom
+      -javaagent:/app/applicationinsights-agent.jar
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
