--- a/helm/prod/mid/idpay-timeline/values.yaml
+++ b/helm/prod/mid/idpay-timeline/values.yaml
@@ -9,11 +9,11 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "1Gi"
+      cpu: "400m"
     limits:
-      memory: "768Mi"
-      cpu: "600m"
+      memory: "1536Mi"
+      cpu: "800m"
 
   autoscaling:
     enable: true
