--- a/helm/prod/top/idpay-payment/values.yaml
+++ b/helm/prod/top/idpay-payment/values.yaml
@@ -9,16 +9,16 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "1Gi"
-      cpu: "500m"
-    limits:
       memory: "2Gi"
       cpu: "1"
+    limits:
+      memory: "3Gi"
+      cpu: "2"
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 6
+    minReplica: 15
+    maxReplica: 24
     pollingInterval: 20 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
