--- a/helm/prod/top/idpay-reward-calculator/values.yaml
+++ b/helm/prod/top/idpay-reward-calculator/values.yaml
@@ -9,11 +9,11 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "1Gi"
-      cpu: "500m"
+      memory: "1536Mi"
+      cpu: "250m"
     limits:
-      memory: "2Gi"
-      cpu: "1"
+      memory: "2560Mi"
+      cpu: "500m"
 
   autoscaling:
     enable: true
