increase reward calculator resources

--- a/helm/prod/top/idpay-reward-calculator/values.yaml
+++ b/helm/prod/top/idpay-reward-calculator/values.yaml
@@ -10,10 +10,10 @@ microservice-chart:
   resources:
     requests:
       memory: "1536Mi"
-      cpu: "250m"
+      cpu: "500m"
     limits:
       memory: "2560Mi"
-      cpu: "500m"
+      cpu: "1"
 
   autoscaling:
     enable: true
