--- a/helm/prod/mid/idpay-timeline/values.yaml
+++ b/helm/prod/mid/idpay-timeline/values.yaml
@@ -9,11 +9,11 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "1Gi"
+      cpu: "400m"
     limits:
-      memory: "768Mi"
-      cpu: "600m"
+      memory: "1536Mi"
+      cpu: "800m"
 
   autoscaling:
     enable: true
@@ -25,7 +25,7 @@ microservice-chart:
       - type: cpu
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+          value: "60"
       - type: memory
         metadata:
           type: Utilization
