--- a/helm/prod/top/idpay-reward-calculator/values.yaml
+++ b/helm/prod/top/idpay-reward-calculator/values.yaml
@@ -9,10 +9,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "1Gi"
+      memory: "1536Mi"
       cpu: "500m"
     limits:
-      memory: "2Gi"
+      memory: "2560Mi"
       cpu: "1"
 
   autoscaling:
@@ -25,7 +25,7 @@ microservice-chart:
       - type: cpu
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+          value: "60"
       - type: memory
         metadata:
           type: Utilization
