fix: update ANPR baseurl

--- a/helm/prod/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/prod/top/idpay-admissibility-assessor/values.yaml
@@ -64,7 +64,7 @@ microservice-chart:
     REDIS_CACHE_ENABLED: "true"
 
     PDND_ACCESS_TOKEN_AUDIENCE: auth.interop.pagopa.it/client-assertion
-
+    PDND_BASE_URL: https://auth.interop.pagopa.it
 
     ANPR_ENV: prod
     ANPR_AUTH_USERID: pagopa-idpay
