--- a/helm/prod/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/prod/top/idpay-admissibility-assessor/values.yaml
@@ -76,3 +76,6 @@ microservice-chart:
     INPS_MOCK_ENABLED: "false"
     INPS_MOCK_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
     INPS_ISEE_CONSULTATION_BASE_URL: https://api.inps.it/modi/soap/ConsultazioneISEE/v1
+
+    ONBOARDING_REQUEST_DELAY_NEXT_DAY: "true"
+    ONBOARDING_REQUEST_ERROR_MAX_RETRY: 5
