fix: add FORCE_STOPPED configuration to idpay-ranker.yaml

--- a/helm/dev/top/idpay-ranker/values.yaml
+++ b/helm/dev/top/idpay-ranker/values.yaml
@@ -37,6 +37,7 @@ microservice-chart:
       -Djava.rmi.server.hostname=127.0.0.1
       -Dcom.sun.management.jmxremote.authenticate=false
       -Dcom.sun.management.jmxremote.ssl=false
+    FORCE_STOPPED: "false"
 
   envSecret:
     aks-api-url: cstar-d-itn-dev-aks-apiserver-url
