--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -82,3 +82,5 @@ microservice-chart:
     INPS_ISEE_CONSULTATION_BASE_URL: https://api.collaudo.inps.it/modi/soap/ConsultazioneISEE/v1
     INPS_MOCK_ENABLED: "true"
     INPS_MOCK_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
+
+    ONBOARDING_ANPR_FAMILY_LIMITS_DELAY_MINUTES: "2"
