--- a/helm/uat/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/uat/top/idpay-admissibility-assessor/values.yaml
@@ -76,3 +76,5 @@ microservice-chart:
     INPS_MOCK_ENABLED: "true"
     INPS_MOCK_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
     INPS_ISEE_CONSULTATION_BASE_URL: https://api.collaudo.inps.it/modi/soap/ConsultazioneISEE/v1
+
+    ONBOARDING_ANPR_FAMILY_LIMITS_DELAY_MINUTES: "5"
