fix: added ERROR_LISTENER_PAUSE_SECONDS to dev, uat and prod

--- a/helm/dev/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/dev/mid/idpay-recovery-error-topic/values.yaml
@@ -59,4 +59,5 @@ microservice-chart:
       -Djava.rmi.server.hostname=127.0.0.1
       -Dcom.sun.management.jmxremote.authenticate=false
       -Dcom.sun.management.jmxremote.ssl=false
-    ERROR_MESSAGE_MAX_RETRY: "2"
+    ERROR_MESSAGE_MAX_RETRY: "5000"
+    ERROR_LISTENER_PAUSE_SECONDS: "600"
