--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -78,6 +78,7 @@ microservice-chart:
     ANPR_AUTH_USERID: pagopa-idpay
     ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
     #ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
+    ANPR_KO_ANOMALY_CODES_LIST: EN122,TEST001
 
     INPS_ISEE_CONSULTATION_BASE_URL: https://api.collaudo.inps.it/modi/soap/ConsultazioneISEE/v1
     INPS_MOCK_ENABLED: "true"
