--- a/helm/prod/mid/idpay-reward-notification/values.yaml
+++ b/helm/prod/mid/idpay-reward-notification/values.yaml
@@ -15,22 +15,8 @@ microservice-chart:
       memory: "1.5Gi"
       cpu: "750m"
 
-
   autoscaling:
-    enable: true
-    minReplica: 1
-    maxReplica: 1
-    pollingInterval: 30 # seconds
-    cooldownPeriod: 300 # seconds
-    triggers:
-      - type: cpu
-        metadata:
-          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "60"
-      - type: memory
-        metadata:
-          type: Utilization
-          value: "70"
+    enable: false
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
