--- a/helm/prod/mid/idpay-timeline/values.yaml
+++ b/helm/prod/mid/idpay-timeline/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "1536Mi"
       cpu: "800m"
 
+  deployment:
+    replica: 3 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 3
