--- a/helm/prod/top/idpay-asset-register-backend/values.yaml
+++ b/helm/prod/top/idpay-asset-register-backend/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "1536Mi"
       cpu: "1000m"
 
+  deployment:
+    replica: 6 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 6
