--- a/helm/prod/top/idpay-payment/values.yaml
+++ b/helm/prod/top/idpay-payment/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "3Gi"
       cpu: "2"
 
+  deployment:
+    replica: 15 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 15
