--- a/helm/prod/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/prod/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -16,6 +16,9 @@ microservice-chart:
       memory: "768Mi"
       cpu: "600m"
 
+  deployment:
+    replica: 3 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 3
