--- a/helm/prod/top/idpay-wallet/values.yaml
+++ b/helm/prod/top/idpay-wallet/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "2048Mi"
       cpu: "2"
 
+  deployment:
+    replica: 6 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 6
