--- a/helm/uat/mid/idpay-reward-notification/values.yaml
+++ b/helm/uat/mid/idpay-reward-notification/values.yaml
@@ -15,6 +15,8 @@ microservice-chart:
       memory: "1.5Gi"
       cpu: "750m"
 
+  deployment:
+    replica: 1 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
