--- a/helm/uat/mid/idpay-timeline/values.yaml
+++ b/helm/uat/mid/idpay-timeline/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "1.5Gi"
       cpu: "1500m"
 
+  deployment:
+    replica: 6 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 6
