--- a/helm/uat/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/uat/top/idpay-onboarding-workflow/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "4Gi"
       cpu: "4000m"
 
+  deployment:
+    replica: 15 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 15
