--- a/helm/uat/top/idpay-payment/values.yaml
+++ b/helm/uat/top/idpay-payment/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "2Gi"
       cpu: "1"
 
+  deployment:
+    replica: 1 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 1
