--- a/helm/uat/top/idpay-wallet/values.yaml
+++ b/helm/uat/top/idpay-wallet/values.yaml
@@ -15,6 +15,9 @@ microservice-chart:
       memory: "2560Mi"
       cpu: "2500m"
 
+  deployment:
+    replica: 9 # This value must be set equal to autoscaling.minReplica
+
   autoscaling:
     enable: true
     minReplica: 9
