--- a/helm/_global/idpay-payment.yaml
+++ b/helm/_global/idpay-payment.yaml
@@ -131,16 +131,16 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-  nameOverride: "canary"
+#  nameOverride: "canary"
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       header: true
       headerName: X-Canary
       headerValue: canary
-      weightPercent: 80
+      weightPercent: 10
     image:
-      repository: ghcr.io/pagopa/idpay-payment
-      tag: v1.17.2@sha256:0e4f26b53cbf65dc769e5889f7041d429c1d131e39d47710a3a55e76d194e1b5
+      repository: ghcr.io/pagopa/idpay-admissibility-assessor
+      tag: <HOT_FIX_IMAGE_HERE>
     envSecret: {}
     envConfig: {}
