--- a/helm/_global/idpay-reward-calculator.yaml
+++ b/helm/_global/idpay-reward-calculator.yaml
@@ -130,9 +130,9 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-  nameOverride: "canary"
+#  nameOverride: "canary"
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       header: true
       headerName: X-Canary
@@ -140,6 +140,6 @@ microservice-chart:
       weightPercent: 10
     image:
       repository: ghcr.io/pagopa/idpay-reward-calculator
-      tag: v2.4.1@sha256:04ab13a8654776ead8ea0e46fa8d105e97d8d35d16d80ee819566f45509db40d
+      tag: <HOT_FIX_IMAGE_HERE>
     envSecret: {}
     envConfig: {}
