--- a/helm/_global/idpay-portal-welfare-backend-initiative.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-initiative.yaml
@@ -155,16 +155,16 @@ microservice-chart:
 # 2. Set canaryDelivery.create: true
 # 3. Configure the hotfix image tag in canaryDelivery.image.tag
 # 4. Revert for remove canary deployment
-#  nameOverride: "canary"
+  nameOverride: "canary"
   canaryDelivery:
-    create: false
+    create: true
     ingress:
       header: true
       headerName: X-Canary
       headerValue: canary
-      weightPercent: 10
+      weightPercent: 20
     image:
       repository: ghcr.io/pagopa/idpay-portal-welfare-backend-initiative
-      tag: <HOT_FIX_IMAGE_HERE>
+      tag: v1.7.1@sha256:09e214d5c7624c2c0dcd52356cfe723ff7d7276b35a94caa4f822dd17a506187
     envSecret: {}
     envConfig: {}
