--- a/helm/uat/top/mcshared-datavault/values.yaml
+++ b/helm/uat/top/mcshared-datavault/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "2000m"
 
   deployment:
-    replica: 1 # This value must be set equal to autoscaling.minReplica
+    replicas: 1 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
