--- a/helm/uat/top/idpay-reward-calculator/values.yaml
+++ b/helm/uat/top/idpay-reward-calculator/values.yaml
@@ -15,7 +15,7 @@ microservice-chart:
       memory: "2Gi"
       cpu: "1"
   deployment:
-    replica: 1 # This value must be set equal to autoscaling.minReplica
+    replicas: 1 # This value must be set equal to autoscaling.minReplica
 
   autoscaling:
     enable: true
